Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-2972. Avoid task rescheduling when a node turns unhealthy

ALL CHANGES:
  TEZ-3166. Fix a few cases where counters aren't fully updated and sent for failed tasks. Only adds tests.
  TEZ-2958. Recovered TA, whose commit cannot be recovered, should move to killed state
  TEZ-3105. TezMxBeanResourceCalculator does not work on IBM JDK 7 or 8 causing Tez failures.
  TEZ-2863. Container, node, and logs not available in UI for tasks that fail to launch
  TEZ-3140. Reduce AM memory usage during serialization
  TEZ-3156. Tez client keeps trying to talk to RM even if RM does not know about the application. 
  TEZ-3115. Shuffle string handling adds significant memory overhead
  TEZ-3149. Tez-tools: Add username in DagInfo
  TEZ-2988. DAGAppMaster::shutdownTezAM should return with a no-op if it has been invoked earlier.
  TEZ-3147. Intermediate mem-to-mem: Fix early exit when only one segment can fit into memory
  TEZ-1911. MergeManager's unconditionalReserve() should check for memory limits before allocating.
  TEZ-3141. mapreduce.task.timeout is not translated to container heartbeat timeout
  TEZ-3128. Avoid stopping containers on the AM shutdown thread.
  TEZ-3129. Tez task and task attempt UI needs application fails with NotFoundException
  TEZ-3114. Shuffle OOM due to EventMetaData flood
  TEZ-3102. Fetch failure of a speculated task causes job hang
  TEZ-3137. Tez task failed with illegal state exception in recovery
  TEZ-3126. Log reason for not reducing parallelism
  TEZ-3123. Containers can get re-used even with conflicting local resources.
  TEZ-3117. Deadlock in Edge and Vertex code
  TEZ-3107. tez-tools: Log warn msgs in case ATS has wrong values (e.g startTime > finishTime).
  TEZ-3103. Shuffle can hang when memory to memory merging enabled